Updated to fix overflowing code boxes.

--- a/css/global.css
+++ b/css/global.css
@@ -338,3 +338,7 @@ a.language-switcher.selected {
   color: #000000;
   text-decoration: none;
 }
+
+.highlight {
+  overflow-x: auto;
+}
